# data-mover

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/data_mover/: __init__.py  __main__.py  cli.py  exceptions.py  formats.py  mover.py  writers.py
tests/: conftest.py  test_arrow.py  test_cli.py  test_formats.py  test_mover.py
