[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-mover"
dynamic = ["version"]
description = "Reliable, chunked database exports from SQLAlchemy to open data formats"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Marcel BP" }]
keywords = ["database", "export", "sqlalchemy", "csv", "json", "parquet", "feather", "etl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["SQLAlchemy>=2.0.30,<3"]

[project.optional-dependencies]
arrow = ["pyarrow>=16"]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-cov>=5",
  "ruff>=0.12.3",
  "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/unixsysdev/data-mover"
Documentation = "https://github.com/unixsysdev/data-mover#readme"
Issues = "https://github.com/unixsysdev/data-mover/issues"
Changelog = "https://github.com/unixsysdev/data-mover/blob/master/CHANGELOG.md"

[project.scripts]
data-mover = "data_mover.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
data_mover = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "data_mover._version.__version__" }

[tool.pytest.ini_options]
addopts = "--cov=data_mover --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise AssertionError",
]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["data_mover"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "PERF", "PIE", "PTH", "RUF", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
